<resources>
    <string name="app_name">Travel Tales</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="countries_visited">Countries Visited: %1$d</string>
    <string name="continents_visited">Continents Visited: %1$d</string>
    <string name="world_wonders">World Wonders: %1$d</string>
    <string name="trips_done">Trips Done: %1$d</string>
    <string name="noti_message">Juan want to be your friend.</string>
    <string name="spain_madrid">Spain, Madrid</string>
    <string name="date">2024.02.01. - 2024.03.01.</string>
    <string name="travel_tales">Travel Tales</string>
    <string name="login">Login</string>
    <string name="app_logo">App logo</string>
    <string name="name_of_my_friend">Name of my friend</string>
    <string name="name">Name</string>
    <string name="country_icon">Country icon</string>
    <string name="_0">0</string>
    <string name="countries">Countries</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="add_trip">+ Add trip</string>
    <string name="travel_stats">📊 Travel stats</string>
    <string name="my_last_trip">My last trip</string>
    <string name="logout">Log out</string>
    <string name="notifications">Notifications</string>
    <string name="my_trips">My Trips</string>
    <string name="trips_of_my_friends">Trips of my friends</string>
    <string name="my_friends">My friends</string>
    <string name="your_travel_statistics">Your Travel Statistics</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="trip_name">Trip Name</string>
    <string name="add_a_brief_description">Add a brief description</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="click_to_select_start_date">Click to select start date</string>
    <string name="click_to_select_end_date">Click to select end date</string>
    <string name="upload_photo">UPLOAD PHOTO</string>
    <string name="save">SAVE</string>
    <string name="picture">Picture</string>
    <string name="average_trip_duration">Average Trip Duration: %d days</string>
    <string name="longest_trip">Longest Trip: %d days</string>
    <string name="follow">Follow</string>
    <string name="trips">Trips</string>
    <string name="countries_visited_24">Countries Visited: 24</string>
    <string name="average_trip_duration_7_days">Average Trip Duration: 7 days</string>
    <string name="longest_trip_14_days">Longest Trip: 14 days</string>
    <string name="trips_completed_40">Trips Completed: 40</string>
    <string name="trips_of_following">Trips of following</string>
    <string name="people">People</string>
    <string name="map_with_my_trips">Map with my trips</string>
    <string name="juan">Juan</string>
    <string name="no_previous_trip">No previous trip</string>

</resources>